Fix spacing

--- a/stylesheets/siteStyle.css
+++ b/stylesheets/siteStyle.css
@@ -37,6 +37,7 @@ td
 	padding-right: 20px;
 	padding-top: 10px;
 	padding-bottom: 10px;
+	text-align: center;
 }
 
 ul
